--- a/config/locales/client.ar.yml
+++ b/config/locales/client.ar.yml
@@ -2064,60 +2064,6 @@ ar:
       logout_disabled: "يتم إيقاف تسجيل الخروج عندما يكون الموقع في وضع القراءة فقط."
     staff_writes_only_mode:
       enabled: "هذا الموقع في وضع القراءة فقط. يُرجى المتابعة للتصفح، لكن سيقتصر التصفح والرد وتسجيل الإعجاب والإجراءات الأخرى على الأعضاء في طاقم العمل فقط."
-    too_few_topics_and_posts_notice_MF: |
-      <a href="https://blog.discourse.org/2014/08/building-a-discourse-community/" target="_blank" rel="noopener noreferrer">لنبدأ المناقشة!</a> هناك { currentTopics, plural,
-          zero {}one {<strong></strong>موضوع واحد}
-          two {<strong></strong>موضوعان}
-          few {<strong>#</strong> موضوعات}
-          many {<strong>#</strong> موضوعًا}
-        other {<strong>#</strong> موضوع}
-      } و{ currentPosts, plural,
-          zero {}one {<strong></strong>منشور واحد}
-          two {<strong></strong>منشوران}
-          few {<strong>#</strong> منشورات}
-          many {<strong>#</strong> منشورًا}
-        other {<strong>#</strong> منشور}
-      }. يحتاج الزوار إلى المزيد لقراءته والرد عليه – نحن نقترح على الأقل { requiredTopics, plural,
-          zero {}one {<strong></strong>موضوعًا واحدًا}
-          two {<strong></strong>موضوعين}
-          few {<strong>#</strong> موضوعات}
-          many {<strong>#</strong> موضوعًا}
-        other {<strong>#</strong> موضوع}
-      } و{ requiredPosts, plural,
-          zero {}one {<strong></strong>منشورًا واحدًا}
-          two {<strong></strong>منشورين}
-          few {<strong>#</strong> منشورات}
-          many {<strong>#</strong> منشورًا}
-        other {<strong>#</strong> منشور}
-      }. لا يمكن إلا لفريق العمل رؤية هذه الرسالة.
-    too_few_topics_notice_MF: |
-      <a href="https://blog.discourse.org/2014/08/building-a-discourse-community/" target="_blank" rel="noopener noreferrer">لنبدأ المناقشة!</a> هناك { currentTopics, plural,
-          zero {}one {<strong></strong>موضوع واحد}
-          two {<strong></strong>موضوعان}
-          few {<strong>#</strong> موضوعات}
-          many {<strong>#</strong> موضوعًا}
-        other {<strong>#</strong> موضوع}
-      }. يحتاج الزوار إلى المزيد لقراءته والرد عليه – نحن نقترح على الأقل { requiredTopics, plural,
-          zero {}one {<strong></strong>موضوعًا واحدًا}
-          two {<strong></strong>موضوعين}
-          few {<strong>#</strong> موضوعات}
-          many {<strong>#</strong> موضوعًا}
-        other {<strong>#</strong> موضوع}
-      }. لا يمكن إلا لفريق العمل رؤية هذه الرسالة.
-    too_few_posts_notice_MF: |
-      <a href="https://blog.discourse.org/2014/08/building-a-discourse-community/" target="_blank" rel="noopener noreferrer">لنبدأ المناقشة!</a> هناك { currentPosts, plural,
-          zero {}one {<strong></strong>منشور واحد}
-          two {<strong></strong>منشوران}
-          few {<strong>#</strong> منشورات}
-          many {<strong>#</strong> منشورًا}
-        other {<strong>#</strong> منشور}
-      }. يحتاج الزوار إلى المزيد لقراءته والرد عليه – نحن نقترح على الأقل { requiredPosts, plural,
-          zero {}one {<strong></strong>منشورًا واحدًا}
-          two {<strong></strong>منشورين}
-          few {<strong>#</strong> منشورات}
-          many {<strong>#</strong> منشورًا}
-        other {<strong>#</strong> منشور}
-      }. لا يمكن إلا لفريق العمل رؤية هذه الرسالة.
     logs_error_rate_notice:
       reached_hour_MF: |
         <b>{relativeAge}</b> – لقد بلغ معدل الخطأ <a href='{url}' target='_blank'>{rate, plural, zero {<strong>#</strong> خطأ/الساعة} one {خطأ واحد (#)/الساعة} two {خطآن (#)/الساعة} few {# أخطاء/الساعة} many {# خطأ/الساعة} other {# خطأ/الساعة}}</a> حد إعدادات الموقع البالغ {limit, plural, zero {<strong>#</strong> خطأ/الساعة} one {خطأ واحد (#)/الساعة} two {خطآن (#)/الساعة} few {# أخطاء/الساعة} many {# خطأ/الساعة} other {# خطأ/الساعة}}.
@@ -4760,6 +4706,8 @@ ar:
       more: "المزيد"
       all_categories: "كل الفئات"
       all_tags: "كل الوسوم"
+      categories_form:
+        save: "حفظ"
       sections:
         custom:
           save: "حفظ"
@@ -5906,6 +5854,8 @@ ar:
               key: "الحد الأدنى"
             maximum:
               key: "الحد الأقصى"
+            type:
+              key: "النوع"
       impersonate:
         title: "الانتحال"
         help: "استخدم هذه الأداة لانتحال شخصية حساب مستخدم لأغراض تصحيح الأخطاء. عليك تسجيل الخروج بعد الانتهاء."
