--- a/config/locales/client.el.yml
+++ b/config/locales/client.el.yml
@@ -3295,6 +3295,8 @@ el:
       more: "Περισσότερα"
       all_categories: "Όλες οι κατηγορίες"
       all_tags: "Όλες οι ετικέτες"
+      categories_form:
+        save: "Αποθήκευση"
       sections:
         custom:
           save: "Αποθήκευση"
@@ -4263,6 +4265,8 @@ el:
               key: "απαραίτητο"
             minimum:
               key: "ελάχιστο"
+            type:
+              key: "τύπος"
       impersonate:
         title: "Υποδυθείτε"
         help: "Χρησιμοποίησε αυτό το εργαλείο για να εντοπίσεις λάθη υποδυόμενος κάποιον άλλο χρήστη. Θα πρέπει να αποσυνδεθείς όταν τελειώσεις."
