--- a/config/locales/client.lv.yml
+++ b/config/locales/client.lv.yml
@@ -2778,6 +2778,8 @@ lv:
         other: "%{count} jauna"
       more: "Vairāk"
       all_categories: "Visas sadaļas"
+      categories_form:
+        save: "Saglabāt"
       sections:
         custom:
           save: "Saglabāt"
@@ -3346,6 +3348,8 @@ lv:
               key: "minimums"
             maximum:
               key: "maksimums"
+            type:
+              key: "tips"
       impersonate:
         title: "Izlikties (impersonate)"
         help: "Use this tool to impersonate a user account for debugging purposes. You will have to log out once finished.\nIzmanto šo rīku lai izkliktos (impersonate) par lietotāju priekš kļūdu (bugs) meklēšanas. Vajadzēs izlogoties pēc sesijas beigām."
