--- a/config/locales/client.ro.yml
+++ b/config/locales/client.ro.yml
@@ -2920,6 +2920,8 @@ ro:
         other: "%{count} nou"
       more: "Mai multe"
       all_categories: "Toate categoriile"
+      categories_form:
+        save: "Salvare"
       sections:
         custom:
           save: "Salvare"
@@ -3574,6 +3576,8 @@ ro:
               key: "minim"
             maximum:
               key: "maxim"
+            type:
+              key: "tip"
       impersonate:
         title: "Joacă rolul utilizatorului"
         help: "Folosește această unealtă pentru a imita un cont de utilizator pentru depanare. Va trebui să te deconectezi după ce termini."
