--- a/config/locales/client.ur.yml
+++ b/config/locales/client.ur.yml
@@ -3587,6 +3587,8 @@ ur:
         other: "%{count} نئے"
       more: "مزید"
       all_categories: "تمام زُمرَہ جات"
+      categories_form:
+        save: "محفوظ کریں"
       sections:
         custom:
           save: "محفوظ کریں"
@@ -4640,6 +4642,8 @@ ur:
               key: "کم از کم"
             maximum:
               key: "زیادہ سے زیادہ"
+            type:
+              key: "قِسم"
       impersonate:
         title: "نقالی"
         help: "ڈِیبَگ مقاصد کیلئے اِس آلے کو استعمال کر کہ ایک صارف کے اکاؤنٹ کی نقالی کریں۔ کام ختم ہونے کے بعد آپ کے ایک دفعہ لاگ آؤٹ کرنا ہو گا۔"
