--- a/plugins/chat/config/locales/client.hu.yml
+++ b/plugins/chat/config/locales/client.hu.yml
@@ -349,6 +349,7 @@ hu:
       thread:
         title: "Cím"
         view_thread: Téma megtekintése
+        default_title: "Szál"
         replies:
           one: "%{count} válasz"
           other: "%{count} válasz"
