--- a/config/locales/client.fr.yml
+++ b/config/locales/client.fr.yml
@@ -1767,36 +1767,6 @@ fr:
       logout_disabled: "La déconnexion est désactivée quand le site est en lecture seule."
     staff_writes_only_mode:
       enabled: "Ce site est en mode réservé aux responsables. Vous pouvez continuer à naviguer, mais les réponses, les j'aime et les autres actions sont limitées aux responsables uniquement."
-    too_few_topics_and_posts_notice_MF: |
-      Commençons <a href="https://blog.discourse.org/2014/08/building-a-discourse-community/" target="_blank" rel="noopener noreferrer">la discussion !</a> Il y a { currentTopics, plural,
-          one {<strong>#</strong> sujet}
-        other {<strong>#</strong> sujets}
-      } et { currentPosts, plural,
-          one {<strong>#</strong> message}
-        other {<strong>#</strong> messages}
-      }. Il en faudrait davantage pour les visiteurs. Nous recommandons de proposer au moins { requiredTopics, plural,
-          one {<strong>#</strong> sujet}
-        other {<strong>#</strong> sujets}
-      } et { requiredPosts, plural,
-          one {<strong>#</strong> message}
-        other {<strong>#</strong> messages}
-      }. Seul les responsables peuvent voir ce message.
-    too_few_topics_notice_MF: |
-      Commençons <a href="https://blog.discourse.org/2014/08/building-a-discourse-community/" target="_blank" rel="noopener noreferrer">la discussion !</a> Il y a { currentTopics, plural,
-          one {<strong>#</strong> sujet}
-        other {<strong>#</strong> sujets}
-      }. Il en faudrait davantage pour les visiteurs. Nous recommandons de proposer au moins { requiredTopics, plural,
-          one {<strong>#</strong> sujet}
-        other {<strong>#</strong> sujets}
-      }. Seuls les responsables peuvent voir ce message.
-    too_few_posts_notice_MF: |
-      Commençons <a href="https://blog.discourse.org/2014/08/building-a-discourse-community/" target="_blank" rel="noopener noreferrer">la discussion !</a> Il y a { currentPosts, plural,
-          one {<strong>#</strong> message}
-        other {<strong>#</strong> messages}
-      }. Il en faudrait davantage pour les visiteurs. Nous recommandons de proposer au moins { requiredPosts, plural,
-          one {<strong>#</strong> message}
-        other {<strong>#</strong> messages}
-      }. Seuls les responsables peuvent voir ce message.
     logs_error_rate_notice:
       reached_hour_MF: |
         <b>{relativeAge}</b> – <a href='{url}' target='_blank'>{rate, plural, one {# erreur/heure} other {# erreurs/heure}}</a> arrive à la limite paramétrée de {limit, plural, one {# erreur/heure} other {# erreurs/heure}}.
@@ -3979,6 +3949,8 @@ fr:
       more: "Plus"
       all_categories: "Toutes les catégories"
       all_tags: "Toutes les étiquettes"
+      categories_form:
+        save: "Enregistrer"
       sections:
         custom:
           save: "Enregistrer"
@@ -5097,6 +5069,8 @@ fr:
               key: "minimum"
             maximum:
               key: "maximum"
+            type:
+              key: "type"
       impersonate:
         title: "Incarner"
         help: "Utilisez cet outil pour incarner un compte utilisateur à des fins de tests. Vous devrez vous déconnecter une fois que vous aurez terminé."
