--- a/config/locales/client.it.yml
+++ b/config/locales/client.it.yml
@@ -1760,24 +1760,6 @@ it:
       logout_disabled: "La disconnessione è disabilitata quando il sito è in modalità di sola lettura."
     staff_writes_only_mode:
       enabled: "Questo sito è in modalità di sola lettura per lo staff. Puoi continuare a navigare nel sito, ma le risposte, i \"Mi piace\" e altre azioni sono limitate ai soli membri dello staff."
-    too_few_topics_and_posts_notice_MF: |
-      <a href="https://blog.discourse.org/2014/08/building-a-discourse-community/" target="_blank" rel="noopener noreferrer">Cominciamo la discussione!</a> { currentTopics, plural,
-          one {C'è <strong>#</strong> argomento}
-        other {Ci sono <strong>#</strong> argomenti}
-      } e { currentPosts, plural,
-          one {<strong>#</strong> messaggio}
-        other {<strong>#</strong> messaggi}
-      }. I visitatori hanno bisogno di altri contenuti per leggere e rispondere: consigliamo almeno { requiredTopics, plural,
-          one {<strong>#</strong> argomento}
-        other {<strong>#</strong> argomenti}
-      } e { requiredPosts, plural,
-          one {<strong>#</strong> messaggio}
-        other {<strong>#</strong> messaggi}
-      }. Solo lo staff può vedere questo messaggio.
-    too_few_topics_notice_MF: |
-      <a href="https://blog.discourse.org/2014/08/building-a-discourse-community/" target="_blank" rel="noopener noreferrer">Cominciamo la discussione!</a> { currentTopics, plural, one {C'è <strong>#</strong> argomento} other {Ci sono<strong>#</strong> argomenti}}. I visitatori hanno bisogno di altri contenuti per leggere e rispondere: consigliamo almeno { requiredTopics, plural, one {<strong>#</strong> argomento} other {<strong>#</strong> argomenti}}. Solo lo staff può vedere questo messaggio.
-    too_few_posts_notice_MF: |
-      <a href="https://blog.discourse.org/2014/08/building-a-discourse-community/" target="_blank" rel="noopener noreferrer">Cominciamo la discussione!</a> { currentPosts, plural, one {C'è <strong>#</strong> messaggio} other {Ci sono <strong>#</strong> messaggi}}. I visitatori hanno bisogno di altri contenuti per leggere e rispondere: consigliamo almeno { requiredPosts, plural, one {<strong>#</strong> messaggio} other {<strong>#</strong> messaggi}}. Solo lo staff può vedere questo messaggio.
     logs_error_rate_notice:
       reached_hour_MF: |
         <b>{relativeAge}</b> – <a href='{url}' target='_blank'>{rate, plural, one {# errore/ora} other {# errori/ore}}</a> ha raggiunto il limite di {limit, plural, one {# errore/ora} other {# errori/ora}} impostato dal sito.
@@ -3960,6 +3942,8 @@ it:
       more: "Altro"
       all_categories: "Tutte le categorie"
       all_tags: "Tutte le etichette"
+      categories_form:
+        save: "Salva"
       sections:
         custom:
           save: "Salva"
@@ -5077,6 +5061,8 @@ it:
               key: "minimo"
             maximum:
               key: "massimo"
+            type:
+              key: "tipo"
       impersonate:
         title: "Impersona utente"
         help: "Usa questo strumento per impersonare un account utente ai fini del debugging. Una volta finito dovrai disconnetterti."
