--- a/config/locales/client.pt_BR.yml
+++ b/config/locales/client.pt_BR.yml
@@ -1785,36 +1785,6 @@ pt_BR:
       logout_disabled: "Não é possível sair enquanto o site estiver em modo somente leitura. Esse recurso está desativado."
     staff_writes_only_mode:
       enabled: "Este site está no modo apenas para funcionários. Continue navegando, mas as respostas, curtidas e outras ações são limitadas apenas aos membros da equipe."
-    too_few_topics_and_posts_notice_MF: |
-      Vamos <a href="https://blog.discourse.org/2014/08/building-a-discourse-community/" target="_blank" rel="noopener noreferrer">iniciar a discussão!</a> Há { currentTopics, plural,
-          one {<strong>#</strong> tópico}
-        other {<strong>#</strong> tópicos}
-      } e { currentPosts, plural,
-          one {<strong>#</strong> postagem}
-        other {<strong>#</strong> postagens}
-      }. Os visitantes precisam de mais para ler e responder. Recomendamos pelo menos { requiredTopics, plural,
-          one {<strong>#</strong> tópico}
-        other {<strong>#</strong> tópicos}
-      } e { requiredPosts, plural,
-          one {<strong>#</strong> postagem}
-        other {<strong>#</strong> postagens}
-      }. Somente a equipe pode ver esta mensagem.
-    too_few_topics_notice_MF: |
-      Vamos <a href="https://blog.discourse.org/2014/08/building-a-discourse-community/" target="_blank" rel="noopener noreferrer">iniciar a discussão!</a> Há { currentTopics, plural,
-          one {<strong>#</strong> tópico}
-        other {<strong>#</strong> tópicos}
-      }. Os visitantes precisam de mais para ler e responder. Recomendamos pelo menos { requiredTopics, plural,
-          one {<strong>#</strong> tópico}
-        other {<strong>#</strong> tópicos}
-      }. Somente a equipe pode ver esta mensagem.
-    too_few_posts_notice_MF: |
-      Vamos <a href="https://blog.discourse.org/2014/08/building-a-discourse-community/" target="_blank" rel="noopener noreferrer">iniciar a discussão!</a> Há { currentPosts, plural,
-          one {<strong>#</strong> postagem}
-        other {<strong>#</strong> postagens}
-      }. Os visitantes precisam de mais para ler e responder. Recomendamos pelo menos { requiredPosts, plural,
-          one {<strong>#</strong> postagem}
-        other {<strong>#</strong> postagens}
-      }. Somente a equipe pode ver esta mensagem.
     logs_error_rate_notice:
       reached_hour_MF: |
         <b>{relativeAge}</b> – <a href='{url}' target='_blank'>a quantidade de {rate, plural, one {# erro/hora} other {# erros/hora}}</a> alcançou o limite de configuração do site de {limit, plural, one {# erro/hora} other {# erros/hora}}.
@@ -4006,6 +3976,8 @@ pt_BR:
       more: "Mais"
       all_categories: "Todas as categorias"
       all_tags: "Todas as etiquetas"
+      categories_form:
+        save: "Salvar"
       sections:
         custom:
           save: "Salvar"
@@ -5128,6 +5100,8 @@ pt_BR:
               key: "mínimo"
             maximum:
               key: "máximo"
+            type:
+              key: "tipo"
       impersonate:
         title: "Representar"
         help: "Use esta ferramenta para representar uma conta de usuário(a) para efeitos de depuração. Você terá que sair dela assim que terminar."
