--- a/config/locales/server.zh_CN.yml
+++ b/config/locales/server.zh_CN.yml
@@ -596,6 +596,7 @@ zh_CN:
   staff_category_description: "适用于管理人员讨论的不公开类别。话题仅对管理员和版主可见。"
   discourse_welcome_topic:
     title: "欢迎来到 %{site_title}! :wave:"
+    body: "我们很高兴你加入。 \n\n%{site_info_quote}\n\n以下是你可以做的一些事情，以便开始：\n\n:speaking_head: **介绍你自己** 在[你的档案](%{base_path}/my/account)上添加你的照片和关于你自己和你的兴趣的信息。你希望被别人了解的一件事是什么？\n\n:open_book: **通过[浏览这些已经发生的讨论](%{base_path}/top)来了解这个社区**。当你发现一个帖子很有趣，信息量很大，或者很有娱乐性，请使用 :heart: ，以表达的欣赏或支持!\n\n:handshake: **通过评论、分享你自己的观点、提出问题或在讨论中提供反馈来贡献**。在回复或开始新话题之前，请查看[社区指南](%{base_path}/faq)。\n\n> 如果你需要帮助或有建议，请随时在[#反馈](%{base_path}/c/site-feedback)或[联系管理员](%{base_path}/about)中询问。\n"
   admin_quick_start_title: "首先阅读：管理员快速入门指南"
   category:
     topic_prefix: "关于“%{category}”类别"
@@ -1943,7 +1944,6 @@ zh_CN:
     auto_handle_queued_age: "在此设定天数后自动处理待审核的记录。举报将被忽略。队列中的帖子和用户将被拒绝。设为 0 将禁用此功能。"
     penalty_step_hours: "以小时为单位对用户进行禁言或封禁的默认处罚。第一次违反默认为第一个值，第二次违反默认为第二个值，依此类推。"
     svg_icon_subset: "添加您希望包含在资源中的其他 FontAwesome 5 图标。使用前缀 'fa-' 表示实心图标，使用 far-' 表示常规图标，使用 'fab-' 表示品牌图标。"
-    max_prints_per_hour_per_user: "/print 页面的最大展示次数（设置为 0 将禁用）"
     full_name_required: "全名是用户个人资料的必填字段。"
     enable_names: "在用户的个人资料、用户卡片和电子邮件中显示用户的全名。禁用将在所有地方隐藏全名。"
     display_name_on_posts: "在帖子中显示用户的全名以及他们的用户名。"
@@ -1965,7 +1965,6 @@ zh_CN:
     embed_post_limit: "要嵌入的最大帖子数。"
     embed_username_required: "创建话题需要用户名。"
     notify_about_reviewable_item_after: "如果经过这么多小时数后仍有未处理的标记，请向版主发送个人信息。设置为 0 将禁用。"
-    show_create_topics_notice: "如果站点的公共话题少于 5 个，请显示通知，要求管理员创建一些话题。"
     delete_drafts_older_than_n_days: "删除超过 (n) 天的草稿。"
     delete_merged_stub_topics_after_days: "在自动删除完全合并的存根话题之前等待的天数。设置为 0 将从不删除存根话题。"
     bootstrap_mode_min_users: "禁用引导程序模式所需的最小用户数(设置为 0 以禁用，最多可能需要 24 小时)"
